<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/editTextNoIdentificacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/no_de_identificacion"
        android:inputType="number" />
    <EditText
        android:id="@+id/editTextNombre"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"/>
    <EditText
        android:id="@+id/editTextApellido"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/apellido"/>

    <EditText
        android:id="@+id/editTextEdad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/edad"
        android:inputType="number" />

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinnerTipoDeSangre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            ></Spinner>
        <Spinner
            android:id="@+id/spinnerRh"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"></Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <EditText
            android:id="@+id/editTextPeso"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/peso_kg"
            android:inputType="numberDecimal"></EditText>

        <EditText
            android:id="@+id/editTextAltura"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/altura_cm"
            android:inputType="number"></EditText>
    </LinearLayout>
</LinearLayout>