<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="misiont.persistenciaenandroid.Activities.MainActivity"

    >
    <include layout="@layout/app_toolbar"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@android:color/background_light">
    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mensaje_bienvenida"
        android:gravity="center"
        android:textAppearance="@style/AppTheme.Title"
        android:layout_margin="5dp"
       />
    <TextView
        android:id="@+id/textViewLogInMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inicia_sesi_n_para_empezar"
        android:layout_below="@id/textViewTitle"
        android:gravity="center"
        android:layout_margin="5dp"
        />
    <ImageView
        android:layout_below="@+id/textViewLogInMessage"
        android:id="@+id/imageViewDrop"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:tint="@color/colorAccent"
        android:layout_margin="10dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_invert_colors_black_24dp"
        />

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewDrop"
        android:hint="@string/nombre_de_usuario"
        android:layout_margin="10dp"/>
    <EditText
        android:id="@+id/editTextContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextUserName"
        android:hint="@string/contrasena"
        android:layout_margin="10dp"/>
    <RelativeLayout
        android:layout_below="@+id/editTextContrasena"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
    <Button

        android:id="@+id/buttonIniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:text="@string/iniciar_sesi_n"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        android:padding="10dp"
        android:layout_margin="10dp"
        />
    <Button
        android:id="@+id/buttonNuevoUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"

        android:layout_toRightOf="@+id/buttonIniciarSesion"
        android:text="@string/nuevo_usuario"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"
        android:padding="10dp"
        android:layout_margin="10dp"
        />
    </RelativeLayout>
    </RelativeLayout>
</LinearLayout>
